feat: adiciona função de tare da balança

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,6 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "baseUrl": "."
-  }
+  },
+  "exclude": ["./src/example.ts"]
 }
