--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/main.js",
-    "dev": "ts-node-dev --respawn src/main.ts"
+    "dev": "ts-node-dev --respawn src/example.ts"
   },
   "devDependencies": {
     "@types/node": "^18.7.2",
