--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "lib": ["es2020"],
     "allowJs": true,
     "outDir": "./dist",
-    "rootDir": "./",
+    "rootDir": "./src",
     "removeComments": true,
     "typeRoots": ["./node_modules/@types", "./src/@types"],
     "esModuleInterop": true,
@@ -22,5 +22,5 @@
     "moduleResolution": "node",
     "baseUrl": "."
   },
-  "exclude": ["./src/example.ts"]
+  "exclude": ["./src/example.ts", "./dist", "./node_modules"]
 }
