--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "./dist/index.js",
   "author": "PedroLuisBrilhadori <pedroluisbrilhadori@gmail.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PedroLuisBrilhadori/prix-module.git"
+  },
   "scripts": {
     "build": "npx tsc",
     "build:types": "npx tsc --declaration --emitDeclarationOnly",
