--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "prix-module",
-  "version": "1.0.0",
+  "name": "prix-3-fit-module",
+  "version": "1.0.1",
   "description": "Modulo para a balança Toledo Prix 3 fit",
   "main": "./dist/index.js",
   "author": "PedroLuisBrilhadori <pedroluisbrilhadori@gmail.com>",
@@ -18,10 +18,8 @@
     "@types/node": "^18.7.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4"
-  },
-  "dependencies": {
     "dotenv": "^16.0.3",
-    "serialport": "^10.5.0"
+    "serialport": "^10.5.0",
+    "typescript": "^4.7.4"
   }
 }
