--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "prix-3-fit-module",
-  "version": "1.0.7",
+  "name": "prix-module",
+  "version": "1.0.8",
   "keywords": [
     "prix 3 fit",
     "toledo",
